<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP10_HOMING" Id="{75b2591d-ef7c-4ddf-b71c-e7a85eb44e97}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP10_HOMING
VAR
	
	R_TRIG_1					: R_TRIG;
	AFT_EVRY_STP				: TON;
	OP10A_HME_STP_NO			: INT;
	OP10A_HME_STP_NO_MIRR		: INT;
	


	


END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	OP10A_O_LHGRIP_HMG1 			:= FALSE;
	OP10A_O_RHGRIP_HMG1 			:= FALSE;
	OP10A_O_LHPUSH_HMG1 			:= FALSE;
	OP10A_O_RHPUSH_HMG1 			:= FALSE;
	OP10A_O_VERT_HMG1   			:= FALSE;
	OP10A_O_DEGRE_HMG1  			:= FALSE;
	OP10A_O_HORZ_HMG1   			:= FALSE;
	                    			
	OP10B_O_LHGRIP_HMG1 			:= FALSE;
	OP10B_O_RHGRIP_HMG1 			:= FALSE;
	OP10B_O_LHPUSH_HMG1 			:= FALSE;
	OP10B_O_RHPUSH_HMG1 			:= FALSE;
	OP10B_O_VERT_HMG1   			:= FALSE;
	OP10B_O_DEGRE_HMG1  			:= FALSE;
	OP10B_O_HORZ_HMG1   			:= FALSE;


IF (OP10A_HME_STP_NO = 10) AND START_HOMNG THEN
	OP10A_ROBO_SFE_HME	:= TRUE;
IF OP10A_ROBO_SFE_HME_FB THEN
	OP10A_HME_STP_NO := OP10A_HME_10_15;
END_IF
END_IF

IF (OP10B_HME_STP_NO = 10) AND START_HOMNG THEN
	OP10B_ROBO_SFE_HME	:= TRUE;
IF OP10B_ROBO_SFE_HME_FB THEN
	OP10B_HME_STP_NO := OP10B_HME_10_15;
END_IF
END_IF

IF I10A_ORING_HORZ_CYL_REV AND I10A_ORING_VERT_CYL_UP AND I10A_ORING_ROTRY_CYL_O_DEG AND 
	I10A_ORING_LH_GRPR_CLSE AND OP10A_ROBO_SFE_HME_FB THEN     (* AND RH GRIPPER SENSOR *)
	OP10A_ALL_HOME					:= TRUE;
ELSE
	OP10A_ALL_HOME					:= FALSE;
END_IF

IF I10A_ORING_HORZ_CYL_REV AND I10A_ORING_VERT_CYL_UP AND I10A_ORING_ROTRY_CYL_O_DEG AND 
 	I10A_ORING_LH_GRPR_CLSE AND I10A_ORING_LH_PUSHR_CYL_REV_FWD THEN  (* AND RH GRIPPER SENSOR *)
	OP10B_ALL_HOME					:= TRUE;
ELSE
	OP10B_ALL_HOME					:= FALSE;
END_IF


]]></ST>
    </Implementation>
    <LineIds Name="OP10_HOMING">
      <LineId Id="3" Count="45" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>